Image Controller Added | Minio Implemented
PostMan Updated
Minio Implemented

--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -20,3 +20,16 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 
 # logging.level.com.zaxxer.hikari=DEBUG
 # logging.level.org.springframework.jdbc.datasource.DataSourceTransactionManager=DEBUG
+
+# Maximum file size
+spring.servlet.multipart.max-file-size=10MB
+# Maximum request size
+spring.servlet.multipart.max-request-size=10MB
+# Maximum size of request payload
+server.tomcat.max-swallow-size=10MB
+
+minio.url=http://localhost:9000
+minio.access.name= minioadmin
+minio.access.secret= minioadmin
+minio.bucket.name= blog
+
