--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "java.compile.nullAnalysis.mode": "automatic"
+    "java.compile.nullAnalysis.mode": "automatic",
+    "cSpell.words": [
+        "Hikari",
+        "jdbc",
+        "Nandalalbera",
+        "springframework",
+        "zaxxer"
+    ]
 }
